<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaPrincipal">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layoutLugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="50dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgLugar"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/txtNombreLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textAlignment="center"
                    android:textSize="30sp"
                     />

                <LinearLayout
                    android:id="@+id/layoutFavorito"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtFavorito"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:textSize="20sp"
                        android:text="@string/txtFavorito" />

                    <EditText
                        android:id="@+id/editTextFavorito"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="none"
                        android:text="0"
                        android:focusable="false"
                        android:clickable="false" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtDescripcion"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/descripcion"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAtras"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:text="@string/btnAtras" />

                    <Button
                        android:id="@+id/btnMarcarFavorito"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="10dp"
                        android:text="@string/btnMarcarFavorito" />
                </LinearLayout>

            </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
